feat: criação do carousel

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -10,9 +10,9 @@
 	</div>
 	<div class="menu-bar__item">
 		<ul>
-			<li><a href="#">YOUTUBE</a></li>
-			<li><a href="#">LINKEDIN</a></li>
-			<li><a href="#">GITHUB</a></li>
+			<li><a href="https://twitter.com/leo_janssen">TWITTER</a></li>
+			<li><a href="https://www.linkedin.com/in/leo-jansen/">LINKEDIN</a></li>
+			<li><a href="https://github.com/leo-jansen/">GITHUB</a></li>
 		</ul>
 	</div>
 </div>
